syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message AdminUser {
  Entity Entity = 1;
  string name = 2;
  string email = 3;
  string id_cognito = 4;
  string id_role_application = 5;
}

message AdminUserListRequest {
  AdminUser payload = 1;
  Metadata metadata = 2;
}

message AdminUserResponse {
  AdminUser response = 1;
}

message AdminUserListResponse {
  repeated AdminUser response = 1;
}

service AdminUserService {
  rpc Create(AdminUser) returns (AdminUserResponse);
  rpc Update(AdminUser) returns (AdminUserResponse);
  rpc FindAll(AdminUserListRequest) returns (AdminUserListResponse);
}
